<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:paddingLeft="7dp"
   android:paddingRight="7dp"
   android:paddingTop="40dp"
   android:descendantFocusability="beforeDescendants">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="7dp"
      android:paddingTop="0dp"
      android:paddingBottom="7dp"
      android:layout_gravity="center_vertical"
      android:paddingRight="7dp"
      android:background="@drawable/selector_card_background"
      android:layout_marginBottom="2dp"
      android:descendantFocusability="afterDescendants">
      
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/about_us"
        android:textColor="@color/black_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:textColor="@color/black_text"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/about_us_bottom"/>
    </LinearLayout>
</FrameLayout>