<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <fragment
                android:id="@+id/map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                class="com.google.android.gms.maps.SupportMapFragment"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center_vertical"
            android:orientation="vertical" >

            <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#c0c0c0"/>


		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_vertical"
            android:layout_margin="0dp"
            android:orientation="horizontal" >
            
		    <LinearLayout
		    android:id="@+id/imageLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/from_button_string"
                android:src="@drawable/start" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/from_button_string"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/indicator" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/to_button_string"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/stop" />
            </LinearLayout>

			<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/from_button_string"
                android:maxLines="2"/>
            <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#c0c0c0"/>
            <Button
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/to_button_string"
                android:maxLines="2" />
            </LinearLayout>
            
        </LinearLayout>
             <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#c0c0c0"/>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_button_string"
                android:textSize="12sp"
				android:clickable="false"/>

            </LinearLayout>
  
</LinearLayout>